force-app/main/default/objects/ssot__LearningProgramPlanRqmt__dlm/fields/ssot__DurationUnit__c.field-meta.xml
<CustomField>
    <fullName>ssot__DurationUnit__c</fullName>
    <label>Duration Unit</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DurationUnit</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>