force-app/main/default/objects/ssot__LearningProgramPlanRqmt__dlm/fields/ssot__GroupNameText__c.field-meta.xml
<CustomField>
    <fullName>ssot__GroupNameText__c</fullName>
    <label>Group Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GroupNameText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>