force-app/main/default/objects/ssot__LearningProgramPlanRqmt__dlm/fields/ssot__rel_1719819810434_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719819810434_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LearningProgramPlanRqmt_LearningProg_rel</label>
    <referenceTo>ssot__LearningProgramPlan__dlm</referenceTo>
    <relationshipLabel>LearningProgramPlanRqmt_LearningProg_rel</relationshipLabel>
    <relationshipName>rel_1719819810434_end</relationshipName>
    <type>Lookup</type>
</CustomField>