force-app/main/default/objects/ssot__LearningProgramPlanRqmt__dlm/fields/ssot__ReusableLearningProgramPlan__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReusableLearningProgramPlan__c</fullName>
    <label>Reusable Learning Program Plan</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReusableLearningProgramPlan</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>